game_data/zdata/generated/ZdataParser.py
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ZdataParser ( Parser ):

    grammarFileName = "ZdataParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'['", "']'", "'('", "')'", "'{'", "'}'", 
                     "';'", "','", "':'", "'='", "'.'", "'|'", "'<'", "'>'", 
                     "'+'", "'-'", "'~'", "'!'", "'*'", "'/'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'export'", 
                     "'default'", "'schema'" ]

    symbolicNames = [ "<INVALID>", "OpenBracket", "CloseBracket", "OpenParen", 
                      "CloseParen", "OpenBrace", "CloseBrace", "SemiColon", 
                      "Comma", "Colon", "Assign", "Dot", "BitOr", "LessThan", 
                      "MoreThan", "Plus", "Minus", "BitNot", "Not", "Multiply", 
                      "Divide", "WhiteSpace", "String", "MultiLineComment", 
                      "SingleLineComment", "DoubleBracketComment", "RawString", 
                      "Integer", "Float", "EXPORT", "DEFAULT", "SCHEMA", 
                      "Identifier" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_schemaStatement = 2
    RULE_exportStatement = 3
    RULE_assignmentStatement = 4
    RULE_expression = 5
    RULE_expressionSequence = 6
    RULE_literal = 7
    RULE_arrayLiteral = 8
    RULE_arrayItem = 9
    RULE_indexedPair = 10
    RULE_defaultPair = 11
    RULE_keyedPair = 12

    ruleNames =  [ "program", "statement", "schemaStatement", "exportStatement", 
                   "assignmentStatement", "expression", "expressionSequence", 
                   "literal", "arrayLiteral", "arrayItem", "indexedPair", 
                   "defaultPair", "keyedPair" ]

    EOF = Token.EOF
    OpenBracket=1
    CloseBracket=2
    OpenParen=3
    CloseParen=4
    OpenBrace=5
    CloseBrace=6
    SemiColon=7
    Comma=8
    Colon=9
    Assign=10
    Dot=11
    BitOr=12
    LessThan=13
    MoreThan=14
    Plus=15
    Minus=16
    BitNot=17
    Not=18
    Multiply=19
    Divide=20
    WhiteSpace=21
    String=22
    MultiLineComment=23
    SingleLineComment=24
    DoubleBracketComment=25
    RawString=26
    Integer=27
    Float=28
    EXPORT=29
    DEFAULT=30
    SCHEMA=31
    Identifier=32

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ZdataParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ZdataParser.StatementContext)
            else:
                return self.getTypedRuleContext(ZdataParser.StatementContext,i)


        def getRuleIndex(self):
            return ZdataParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = ZdataParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 29
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 6979321984) != 0):
                self.state = 26
                self.statement()
                self.state = 31
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 32
            self.match(ZdataParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SemiColon(self):
            return self.getToken(ZdataParser.SemiColon, 0)

        def assignmentStatement(self):
            return self.getTypedRuleContext(ZdataParser.AssignmentStatementContext,0)


        def schemaStatement(self):
            return self.getTypedRuleContext(ZdataParser.SchemaStatementContext,0)


        def exportStatement(self):
            return self.getTypedRuleContext(ZdataParser.ExportStatementContext,0)


        def getRuleIndex(self):
            return ZdataParser.RULE_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = ZdataParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 38
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [32]:
                self.state = 34
                self.assignmentStatement()
                pass
            elif token in [31]:
                self.state = 35
                self.schemaStatement()
                pass
            elif token in [29]:
                self.state = 36
                self.exportStatement()
                pass
            elif token in [7]:
                pass
            else:
                raise NoViableAltException(self)

            self.state = 40
            self.match(ZdataParser.SemiColon)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SchemaStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SCHEMA(self):
            return self.getToken(ZdataParser.SCHEMA, 0)

        def Identifier(self):
            return self.getToken(ZdataParser.Identifier, 0)

        def getRuleIndex(self):
            return ZdataParser.RULE_schemaStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSchemaStatement" ):
                return visitor.visitSchemaStatement(self)
            else:
                return visitor.visitChildren(self)




    def schemaStatement(self):

        localctx = ZdataParser.SchemaStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_schemaStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self.match(ZdataParser.SCHEMA)
            self.state = 43
            self.match(ZdataParser.Identifier)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExportStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EXPORT(self):
            return self.getToken(ZdataParser.EXPORT, 0)

        def assignmentStatement(self):
            return self.getTypedRuleContext(ZdataParser.AssignmentStatementContext,0)


        def getRuleIndex(self):
            return ZdataParser.RULE_exportStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExportStatement" ):
                return visitor.visitExportStatement(self)
            else:
                return visitor.visitChildren(self)




    def exportStatement(self):

        localctx = ZdataParser.ExportStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_exportStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self.match(ZdataParser.EXPORT)
            self.state = 46
            self.assignmentStatement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.type_ = None # Token
            self.variableName = None # Token
            self.size = None # ExpressionContext
            self.right = None # ExpressionContext

        def Assign(self):
            return self.getToken(ZdataParser.Assign, 0)

        def Identifier(self, i:int=None):
            if i is None:
                return self.getTokens(ZdataParser.Identifier)
            else:
                return self.getToken(ZdataParser.Identifier, i)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ZdataParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(ZdataParser.ExpressionContext,i)


        def OpenBracket(self):
            return self.getToken(ZdataParser.OpenBracket, 0)

        def CloseBracket(self):
            return self.getToken(ZdataParser.CloseBracket, 0)

        def getRuleIndex(self):
            return ZdataParser.RULE_assignmentStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignmentStatement" ):
                return visitor.visitAssignmentStatement(self)
            else:
                return visitor.visitChildren(self)




    def assignmentStatement(self):

        localctx = ZdataParser.AssignmentStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_assignmentStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            localctx.type_ = self.match(ZdataParser.Identifier)
            self.state = 49
            localctx.variableName = self.match(ZdataParser.Identifier)
            self.state = 54
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==1:
                self.state = 50
                self.match(ZdataParser.OpenBracket)
                self.state = 51
                localctx.size = self.expression(0)
                self.state = 52
                self.match(ZdataParser.CloseBracket)


            self.state = 56
            self.match(ZdataParser.Assign)
            self.state = 57
            localctx.right = self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ZdataParser.RULE_expression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class LiteralExpressionContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ZdataParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def literal(self):
            return self.getTypedRuleContext(ZdataParser.LiteralContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLiteralExpression" ):
                return visitor.visitLiteralExpression(self)
            else:
                return visitor.visitChildren(self)


    class GroupingExpressionContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ZdataParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def OpenParen(self):
            return self.getToken(ZdataParser.OpenParen, 0)
        def expression(self):
            return self.getTypedRuleContext(ZdataParser.ExpressionContext,0)

        def CloseParen(self):
            return self.getToken(ZdataParser.CloseParen, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGroupingExpression" ):
                return visitor.visitGroupingExpression(self)
            else:
                return visitor.visitChildren(self)


    class VariableAccessExpressionContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ZdataParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Identifier(self):
            return self.getToken(ZdataParser.Identifier, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableAccessExpression" ):
                return visitor.visitVariableAccessExpression(self)
            else:
                return visitor.visitChildren(self)


    class MultiplicativeExpressionContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ZdataParser.ExpressionContext
            super().__init__(parser)
            self.left = None # ExpressionContext
            self.op = None # Token
            self.right = None # ExpressionContext
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ZdataParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(ZdataParser.ExpressionContext,i)

        def Multiply(self):
            return self.getToken(ZdataParser.Multiply, 0)
        def Divide(self):
            return self.getToken(ZdataParser.Divide, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMultiplicativeExpression" ):
                return visitor.visitMultiplicativeExpression(self)
            else:
                return visitor.visitChildren(self)


    class AdditiveExpressionContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ZdataParser.ExpressionContext
            super().__init__(parser)
            self.left = None # ExpressionContext
            self.op = None # Token
            self.right = None # ExpressionContext
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ZdataParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(ZdataParser.ExpressionContext,i)

        def Plus(self):
            return self.getToken(ZdataParser.Plus, 0)
        def Minus(self):
            return self.getToken(ZdataParser.Minus, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAdditiveExpression" ):
                return visitor.visitAdditiveExpression(self)
            else:
                return visitor.visitChildren(self)


    class UnionExpressionContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ZdataParser.ExpressionContext
            super().__init__(parser)
            self.left = None # ExpressionContext
            self.right = None # ExpressionContext
            self.copyFrom(ctx)

        def BitOr(self):
            return self.getToken(ZdataParser.BitOr, 0)
        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ZdataParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(ZdataParser.ExpressionContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnionExpression" ):
                return visitor.visitUnionExpression(self)
            else:
                return visitor.visitChildren(self)


    class MemberAccessExpressionContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ZdataParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(ZdataParser.ExpressionContext,0)

        def Dot(self, i:int=None):
            if i is None:
                return self.getTokens(ZdataParser.Dot)
            else:
                return self.getToken(ZdataParser.Dot, i)
        def Identifier(self, i:int=None):
            if i is None:
                return self.getTokens(ZdataParser.Identifier)
            else:
                return self.getToken(ZdataParser.Identifier, i)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMemberAccessExpression" ):
                return visitor.visitMemberAccessExpression(self)
            else:
                return visitor.visitChildren(self)


    class IndexingExpressionContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ZdataParser.ExpressionContext
            super().__init__(parser)
            self.base = None # ExpressionContext
            self.index = None # ExpressionContext
            self.copyFrom(ctx)

        def OpenBracket(self):
            return self.getToken(ZdataParser.OpenBracket, 0)
        def CloseBracket(self):
            return self.getToken(ZdataParser.CloseBracket, 0)
        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ZdataParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(ZdataParser.ExpressionContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIndexingExpression" ):
                return visitor.visitIndexingExpression(self)
            else:
                return visitor.visitChildren(self)


    class FunctionCallExpressionContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ZdataParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(ZdataParser.ExpressionContext,0)

        def OpenParen(self):
            return self.getToken(ZdataParser.OpenParen, 0)
        def CloseParen(self):
            return self.getToken(ZdataParser.CloseParen, 0)
        def expressionSequence(self):
            return self.getTypedRuleContext(ZdataParser.ExpressionSequenceContext,0)

        def arrayLiteral(self):
            return self.getTypedRuleContext(ZdataParser.ArrayLiteralContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionCallExpression" ):
                return visitor.visitFunctionCallExpression(self)
            else:
                return visitor.visitChildren(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ZdataParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 10
        self.enterRecursionRule(localctx, 10, self.RULE_expression, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [5, 22, 26, 27, 28]:
                localctx = ZdataParser.LiteralExpressionContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 60
                self.literal()
                pass
            elif token in [3]:
                localctx = ZdataParser.GroupingExpressionContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 61
                self.match(ZdataParser.OpenParen)
                self.state = 62
                self.expression(0)
                self.state = 63
                self.match(ZdataParser.CloseParen)
                pass
            elif token in [32]:
                localctx = ZdataParser.VariableAccessExpressionContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 65
                self.match(ZdataParser.Identifier)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 100
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 98
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
                    if la_ == 1:
                        localctx = ZdataParser.MultiplicativeExpressionContext(self, ZdataParser.ExpressionContext(self, _parentctx, _parentState))
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 68
                        if not self.precpred(self._ctx, 8):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")
                        self.state = 69
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==19 or _la==20):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 70
                        localctx.right = self.expression(9)
                        pass

                    elif la_ == 2:
                        localctx = ZdataParser.AdditiveExpressionContext(self, ZdataParser.ExpressionContext(self, _parentctx, _parentState))
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 71
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 72
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==15 or _la==16):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 73
                        localctx.right = self.expression(8)
                        pass

                    elif la_ == 3:
                        localctx = ZdataParser.UnionExpressionContext(self, ZdataParser.ExpressionContext(self, _parentctx, _parentState))
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 74
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 75
                        self.match(ZdataParser.BitOr)
                        self.state = 76
                        localctx.right = self.expression(7)
                        pass

                    elif la_ == 4:
                        localctx = ZdataParser.MemberAccessExpressionContext(self, ZdataParser.ExpressionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 77
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 80 
                        self._errHandler.sync(self)
                        _alt = 1
                        while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                            if _alt == 1:
                                self.state = 78
                                self.match(ZdataParser.Dot)
                                self.state = 79
                                self.match(ZdataParser.Identifier)

                            else:
                                raise NoViableAltException(self)
                            self.state = 82 
                            self._errHandler.sync(self)
                            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

                        pass

                    elif la_ == 5:
                        localctx = ZdataParser.IndexingExpressionContext(self, ZdataParser.ExpressionContext(self, _parentctx, _parentState))
                        localctx.base = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 84
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 85
                        self.match(ZdataParser.OpenBracket)
                        self.state = 86
                        localctx.index = self.expression(0)
                        self.state = 87
                        self.match(ZdataParser.CloseBracket)
                        pass

                    elif la_ == 6:
                        localctx = ZdataParser.FunctionCallExpressionContext(self, ZdataParser.ExpressionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 89
                        if not self.precpred(self._ctx, 1):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                        self.state = 90
                        self.match(ZdataParser.OpenParen)
                        self.state = 92
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if (((_la) & ~0x3f) == 0 and ((1 << _la) & 4768923688) != 0):
                            self.state = 91
                            self.expressionSequence()


                        self.state = 94
                        self.match(ZdataParser.CloseParen)
                        self.state = 96
                        self._errHandler.sync(self)
                        la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                        if la_ == 1:
                            self.state = 95
                            self.arrayLiteral()


                        pass

             
                self.state = 102
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class ExpressionSequenceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ZdataParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(ZdataParser.ExpressionContext,i)


        def Comma(self, i:int=None):
            if i is None:
                return self.getTokens(ZdataParser.Comma)
            else:
                return self.getToken(ZdataParser.Comma, i)

        def getRuleIndex(self):
            return ZdataParser.RULE_expressionSequence

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpressionSequence" ):
                return visitor.visitExpressionSequence(self)
            else:
                return visitor.visitChildren(self)




    def expressionSequence(self):

        localctx = ZdataParser.ExpressionSequenceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_expressionSequence)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.expression(0)
            self.state = 108
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 104
                    self.match(ZdataParser.Comma)
                    self.state = 105
                    self.expression(0) 
                self.state = 110
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==8:
                self.state = 111
                self.match(ZdataParser.Comma)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arrayLiteral(self):
            return self.getTypedRuleContext(ZdataParser.ArrayLiteralContext,0)


        def String(self):
            return self.getToken(ZdataParser.String, 0)

        def RawString(self):
            return self.getToken(ZdataParser.RawString, 0)

        def Integer(self):
            return self.getToken(ZdataParser.Integer, 0)

        def Float(self):
            return self.getToken(ZdataParser.Float, 0)

        def getRuleIndex(self):
            return ZdataParser.RULE_literal

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLiteral" ):
                return visitor.visitLiteral(self)
            else:
                return visitor.visitChildren(self)




    def literal(self):

        localctx = ZdataParser.LiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_literal)
        try:
            self.state = 119
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [5]:
                self.enterOuterAlt(localctx, 1)
                self.state = 114
                self.arrayLiteral()
                pass
            elif token in [22]:
                self.enterOuterAlt(localctx, 2)
                self.state = 115
                self.match(ZdataParser.String)
                pass
            elif token in [26]:
                self.enterOuterAlt(localctx, 3)
                self.state = 116
                self.match(ZdataParser.RawString)
                pass
            elif token in [27]:
                self.enterOuterAlt(localctx, 4)
                self.state = 117
                self.match(ZdataParser.Integer)
                pass
            elif token in [28]:
                self.enterOuterAlt(localctx, 5)
                self.state = 118
                self.match(ZdataParser.Float)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayLiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OpenBrace(self):
            return self.getToken(ZdataParser.OpenBrace, 0)

        def CloseBrace(self):
            return self.getToken(ZdataParser.CloseBrace, 0)

        def arrayItem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ZdataParser.ArrayItemContext)
            else:
                return self.getTypedRuleContext(ZdataParser.ArrayItemContext,i)


        def Comma(self, i:int=None):
            if i is None:
                return self.getTokens(ZdataParser.Comma)
            else:
                return self.getToken(ZdataParser.Comma, i)

        def getRuleIndex(self):
            return ZdataParser.RULE_arrayLiteral

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayLiteral" ):
                return visitor.visitArrayLiteral(self)
            else:
                return visitor.visitChildren(self)




    def arrayLiteral(self):

        localctx = ZdataParser.ArrayLiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_arrayLiteral)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(ZdataParser.OpenBrace)
            self.state = 130
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 5842667562) != 0):
                self.state = 122
                self.arrayItem()
                self.state = 127
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,12,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 123
                        self.match(ZdataParser.Comma)
                        self.state = 124
                        self.arrayItem() 
                    self.state = 129
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,12,self._ctx)



            self.state = 133
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==8:
                self.state = 132
                self.match(ZdataParser.Comma)


            self.state = 135
            self.match(ZdataParser.CloseBrace)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayItemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(ZdataParser.ExpressionContext,0)


        def defaultPair(self):
            return self.getTypedRuleContext(ZdataParser.DefaultPairContext,0)


        def keyedPair(self):
            return self.getTypedRuleContext(ZdataParser.KeyedPairContext,0)


        def indexedPair(self):
            return self.getTypedRuleContext(ZdataParser.IndexedPairContext,0)


        def getRuleIndex(self):
            return ZdataParser.RULE_arrayItem

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayItem" ):
                return visitor.visitArrayItem(self)
            else:
                return visitor.visitChildren(self)




    def arrayItem(self):
